added functionality with OOP